# MailMind

./: .env  .gitignore  .replit  app.py  config.py  email_integration.py  email_sender.py  fastapi_app.py  flask_app.py  function_registry.py  main.py  main_fastapi.py  ollama_client.py  overview.txt  project_dependencies.txt  pyproject.toml  replit.md  sample_functions.py  setup.txt  test_email.txt
.local/state/replit/agent/: .latest.json
api/: email_integration.py  email_processor.py  email_sender.py  function_registry.py  ollama_client.py
attached_assets/: Pasted-2025-08-22-06-39-26-913-INFO-Successfully-connected-to-Gmail-IMAP-2025-08-22-06-39-38-0000--1755845064016_1755845064019.txt  Pasted-Invalid-session-Uzs5kTaTPeya1cSEAAAA-further-occurrences-of-this-error-will-be-logged-with-level-IN-1755843654661_1755843654664.txt
config/: config.py
routes/: api_routes.py  main_routes.py
scripts/: __init__.py  analytics_functions.py  chart_functions.py  finance_functions.py  sales_functions.py  system_functions.py  user_functions.py
static/: style.css
templates/: base.html  index.html  index_fastapi.html  logs.html  logs_fastapi.html
